ml/ddos-detector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddos-detector
  labels:
    app: ddos-detector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ddos-detector
  template:
    metadata:
      labels:
        app: ddos-detector
      annotations:
        sidecar.istio.io/inject: "false"  # Disable Istio sidecar injection
    spec:
      serviceAccountName: ddos-detector-sa
      containers:
        - name: ddos-detector
          image: hudabhai/ddos-detector:latest71  # Update with your image
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      restartPolicy: Always
